--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>mx.com.raccoon.punto.venta</groupId>
 	<artifactId>mx.com.raccoon.punto.venta</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>punto.venta</name>
+	<name>punto-venta</name>
 	<description>Punto de venta Raccoon</description>
 	<properties>
 		<java.version>17</java.version>
