--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-spring.application.name=mx.com.raccoon.punto.venta
+spring.application.name=punto-venta
+server.port=${PORT:8001}
 
 #Conexion a base
-spring.datasource.url=jdbc:mysql://localhost:3306/post_db
-spring.datasource.username=root
-spring.datasource.password=sasa
+spring.datasource.url=jdbc:mysql://${DB_HOST:mysql8:3306}/${DB_DATABASE:raccoon_db}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:sasa}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
+
+logging.file.path=/app/logs
