--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=punto-venta
 server.port=${PORT:8001}
 
 #Conexion a base
-spring.datasource.url=jdbc:mysql://${DB_HOST:mysql8:3306}/${DB_DATABASE:raccoon_db}
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost:3306}/${DB_DATABASE:raccoon_db}
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:sasa}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,5 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 logging.file.path=/app/logs
