--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=${DB_PASSWORD:sasa}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:create}
 logging.level.org.hibernate.SQL=debug
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
